<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E1F5FE"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/corrimei"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@drawable/alert"
                android:enabled="true"
                android:focusable="true"
                android:longClickable="true"
                android:padding="5dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="20sp" />





            <TextView
                android:id="@+id/imei"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:background="@drawable/alert"
                android:enabled="true"
                android:focusable="true"
                android:longClickable="true"
                android:padding="10dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/instruct"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:background="@drawable/instruct"
                android:enabled="true"
                android:layout_marginTop="0dp"
                android:focusable="true"
                android:longClickable="true"
                android:padding="1dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="20sp"
                android:textColorHighlight="#0091EA"/>

            <EditText
                android:id="@+id/inputimei"
                android:layout_width="320dip"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:background="@drawable/textviewimei"
                android:inputType="number"
                android:padding="10dp"
                android:cursorVisible="true"
                android:hint="@string/type_here"/>



            <Button
                android:id="@+id/cust"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:background="@drawable/sn"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/generate_custom_imei"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/new_button"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:background="@drawable/sn"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/generate_specific_imei"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />



            <Button
                android:id="@+id/about_button"
                android:layout_width="300dip"
                android:layout_marginBottom="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sn"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/tutorial"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />




            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                ads:adSize="LARGE_BANNER"
                ads:adUnitId="@string/Banner_ad_unit_id3">
            </com.google.android.gms.ads.AdView>









        </LinearLayout>
    </ScrollView>




    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />


</RelativeLayout>

