<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E1F5FE">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <EditText
                android:id="@+id/inputimei"
                android:layout_width="320dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/textviewimei"
                android:cursorVisible="true"
                android:hint="@string/type_here2"
                android:inputType="number"
                android:maxLength="15"
                android:padding="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/clear"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="130dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/sn"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/clear"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/check"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="130dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/sn"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/analyze"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/imei2"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:background="@drawable/sn"
                android:padding="1dp"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/encuentra_mi_imei"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/red"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@drawable/alert"
                android:enabled="true"
                android:focusable="true"
                android:longClickable="true"
                android:padding="1dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColorHighlight="#0091EA"
                android:textIsSelectable="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/green"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:background="@drawable/alert"
                android:enabled="true"
                android:focusable="true"
                android:longClickable="true"
                android:padding="1dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColorHighlight="#0091EA"
                android:textIsSelectable="true"
                android:textSize="20sp" />

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                ads:adSize="MEDIUM_RECTANGLE"
                ads:adUnitId="@string/Banner_ad_unit_id3">
            </com.google.android.gms.ads.AdView>

            <TextView
                android:id="@+id/corrimei"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/corrimei"
                android:enabled="true"
                android:focusable="true"
                android:longClickable="true"
                android:padding="5dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tac"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:background="@drawable/tac"
                android:enabled="true"
                android:focusable="true"
                android:freezesText="true"
                android:longClickable="true"
                android:padding="5dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rbi"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:background="@drawable/rbi"
                android:enabled="true"
                android:focusable="true"
                android:longClickable="true"
                android:padding="5dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/meb"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:background="@drawable/meb"
                android:enabled="true"
                android:focusable="true"
                android:longClickable="true"
                android:padding="5dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fac"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:background="@drawable/fac"
                android:enabled="true"
                android:focusable="true"
                android:longClickable="true"
                android:padding="5dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sn"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:background="@drawable/sn"
                android:enabled="true"
                android:focusable="true"
                android:longClickable="true"
                android:padding="5dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/ld"
                android:layout_width="300dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="90dp"
                android:background="@drawable/ln"
                android:enabled="true"
                android:focusable="true"
                android:longClickable="true"
                android:padding="5dp"
                android:shadowColor="#FFFFFF"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>


    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />
</RelativeLayout>

